@@ -1,270 +1,0 @@
-.\" Automatically generated by Pod::Man v1.34, Pod::Parser v1.13
-.\"
-.\" Standard preamble:
-.\" ========================================================================
-.de Sh \" Subsection heading
-.br
-.if t .Sp
-.ne 5
-.PP
-\fB\\$1\fR
-.PP
-..
-.de Sp \" Vertical space (when we can't use .PP)
-.if t .sp .5v
-.if n .sp
-..
-.de Vb \" Begin verbatim text
-.ft CW
-.nf
-.ne \\$1
-..
-.de Ve \" End verbatim text
-.ft R
-.fi
-..
-.\" Set up some character translations and predefined strings.  \*(-- will
-.\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
-.\" double quote, and \*(R" will give a right double quote.  | will give a
-.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used to
-.\" do unbreakable dashes and therefore won't be available.  \*(C` and \*(C'
-.\" expand to `' in nroff, nothing in troff, for use with C<>.
-.tr \(*W-|\(bv\*(Tr
-.ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
-.ie n \{\
-.    ds -- \(*W-
-.    ds PI pi
-.    if (\n(.H=4u)&(1m=24u) .ds -- \(*W\h'-12u'\(*W\h'-12u'-\" diablo 10 pitch
-.    if (\n(.H=4u)&(1m=20u) .ds -- \(*W\h'-12u'\(*W\h'-8u'-\"  diablo 12 pitch
-.    ds L" ""
-.    ds R" ""
-.    ds C` ""
-.    ds C' ""
-'br\}
-.el\{\
-.    ds -- \|\(em\|
-.    ds PI \(*p
-.    ds L" ``
-.    ds R" ''
-'br\}
-.\"
-.\" If the F register is turned on, we'll generate index entries on stderr for
-.\" titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and index
-.\" entries marked with X<> in POD.  Of course, you'll have to process the
-.\" output yourself in some meaningful fashion.
-.if \nF \{\
-.    de IX
-.    tm Index:\\$1\t\\n%\t"\\$2"
-..
-.    nr % 0
-.    rr F
-.\}
-.\"
-.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
-.\" way too many mistakes in technical documents.
-.hy 0
-.if n .na
-.\"
-.\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
-.\" Fear.  Run.  Save yourself.  No user-serviceable parts.
-.    \" fudge factors for nroff and troff
-.if n \{\
-.    ds #H 0
-.    ds #V .8m
-.    ds #F .3m
-.    ds #[ \f1
-.    ds #] \fP
-.\}
-.if t \{\
-.    ds #H ((1u-(\\\\n(.fu%2u))*.13m)
-.    ds #V .6m
-.    ds #F 0
-.    ds #[ \&
-.    ds #] \&
-.\}
-.    \" simple accents for nroff and troff
-.if n \{\
-.    ds ' \&
-.    ds ` \&
-.    ds ^ \&
-.    ds , \&
-.    ds ~ ~
-.    ds /
-.\}
-.if t \{\
-.    ds ' \\k:\h'-(\\n(.wu*8/10-\*(#H)'\'\h"|\\n:u"
-.    ds ` \\k:\h'-(\\n(.wu*8/10-\*(#H)'\`\h'|\\n:u'
-.    ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'^\h'|\\n:u'
-.    ds , \\k:\h'-(\\n(.wu*8/10)',\h'|\\n:u'
-.    ds ~ \\k:\h'-(\\n(.wu-\*(#H-.1m)'~\h'|\\n:u'
-.    ds / \\k:\h'-(\\n(.wu*8/10-\*(#H)'\z\(sl\h'|\\n:u'
-.\}
-.    \" troff and (daisy-wheel) nroff accents
-.ds : \\k:\h'-(\\n(.wu*8/10-\*(#H+.1m+\*(#F)'\v'-\*(#V'\z.\h'.2m+\*(#F'.\h'|\\n:u'\v'\*(#V'
-.ds 8 \h'\*(#H'\(*b\h'-\*(#H'
-.ds o \\k:\h'-(\\n(.wu+\w'\(de'u-\*(#H)/2u'\v'-.3n'\*(#[\z\(de\v'.3n'\h'|\\n:u'\*(#]
-.ds d- \h'\*(#H'\(pd\h'-\w'~'u'\v'-.25m'\f2\(hy\fP\v'.25m'\h'-\*(#H'
-.ds D- D\\k:\h'-\w'D'u'\v'-.11m'\z\(hy\v'.11m'\h'|\\n:u'
-.ds th \*(#[\v'.3m'\s+1I\s-1\v'-.3m'\h'-(\w'I'u*2/3)'\s-1o\s+1\*(#]
-.ds Th \*(#[\s+2I\s-2\h'-\w'I'u*3/5'\v'-.3m'o\v'.3m'\*(#]
-.ds ae a\h'-(\w'a'u*4/10)'e
-.ds Ae A\h'-(\w'A'u*4/10)'E
-.    \" corrections for vroff
-.if v .ds ~ \\k:\h'-(\\n(.wu*9/10-\*(#H)'\s-2\u~\d\s+2\h'|\\n:u'
-.if v .ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'\v'-.4m'^\v'.4m'\h'|\\n:u'
-.    \" for low resolution devices (crt and lpr)
-.if \n(.H>23 .if \n(.V>19 \
-\{\
-.    ds : e
-.    ds 8 ss
-.    ds o a
-.    ds d- d\h'-1'\(ga
-.    ds D- D\h'-1'\(hy
-.    ds th \o'bp'
-.    ds Th \o'LP'
-.    ds ae ae
-.    ds Ae AE
-.\}
-.rm #[ #] #H #V #F C
-.\" ========================================================================
-.\"
-.IX Title "ECHANGELOG 1"
-.TH ECHANGELOG 1 "2003-04-27" "perl v5.8.0" "User Contributed Perl Documentation"
-.SH "NAME"
-echangelog \- update portage ChangeLogs
-.SH "SYNOPSIS"
-.IX Header "SYNOPSIS"
-echangelog [ \fItext\fR ]
-.SH "DESCRIPTION"
-.IX Header "DESCRIPTION"
-This tool provides an easy way to create or update portage ChangeLogs
-in Gentoo.  The tool scans the current directory, which is assumed to
-be a package directory such as /usr/portage/app\-editors/vim, finds
-what files have been changed or added, and inserts the appropriate
-entry to ChangeLog.  If \fItext\fR is not provided on the command\-line,
-echangelog prompts for it.
-.PP
-All modifications should occur before running echangelog so that it
-can include the appropriate file information in the ChangeLog entry.
-For example, you should run \*(L"cvs add\*(R" on your files, otherwise
-echangelog won't know those files are part of the update.
-.PP
-If your text would cause the ChangeLog entry to exceed 80 columns, it
-will be rewrapped to keep the ChangeLog neat.  If you need special
-formatting in the ChangeLog, then you can either (1) run echangelog
-with no text on the command\-line, and make sure that your text won't
-be too wide, (2) edit the ChangeLog manually.  If you prefer (2), I'd
-recommend something like \*(L"echangelog blah\*(R" so that the header lines
-are computed correctly, then edit and change \*(L"blah\*(R" to your preferred
-text.
-.SH "OPTIONS"
-.IX Header "OPTIONS"
-Presently echangelog is simple enough that it supplies no options.
-Probably I'll add \fB\-\-help\fR and \fB\-\-version\fR in the future, but for
-now it's enough to track the gentoolkit version.
-.SH "EXAMPLES"
-.IX Header "EXAMPLES"
-To create a ChangeLog for a completely new package.  The header is
-parsed from skel.ebuild.
-.PP
-.Vb 2
-\&  $ cvs add metalog-0.1.ebuild
-\&  cvs server: use 'cvs commit' to add this file permanently
-.Ve
-.PP
-.Vb 13
-\&  $ echangelog 'New ebuild, thanks to Harvey McGillicuddy'
-\&  --- ChangeLog   1969-12-31 19:00:00.000000000 -0500
-\&  +++ ChangeLog.new       2003-02-23 14:04:06.000000000 -0500
-\&  @@ -0,0 +1,9 @@
-\&  +# ChangeLog for app-admin/metalog
-\&  +# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-\&  +# $Header$
-\&  +
-\&  +*metalog-0.1 (23 Feb 2003)
-\&  +
-\&  +  23 Feb 2003; Aron Griffis <agriffis@gentoo.org> metalog-0.1.ebuild :
-\&  +  New ebuild, thanks to Harvey McGillicuddy
-\&  +
-.Ve
-.PP
-To bump a revision.  Note you need to \*(L"cvs add\*(R" so that echangelog
-will notice the new file.
-.PP
-.Vb 2
-\&  $ cvs add metalog-0.1-r1.ebuild
-\&  cvs server: use 'cvs commit' to add this file permanently
-.Ve
-.PP
-.Vb 6
-\&  $ echangelog 'Bump revision to fix bug #999'
-\&  --- ChangeLog   2003-02-23 14:04:06.000000000 -0500
-\&  +++ ChangeLog.new       2003-02-23 14:07:48.000000000 -0500
-\&  @@ -2,6 +2,11 @@
-\&   # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-\&   # $Header$
-.Ve
-.PP
-.Vb 6
-\&  +*metalog-0.1-r1 (23 Feb 2003)
-\&  +
-\&  +  23 Feb 2003; Aron Griffis <agriffis@gentoo.org> metalog-0.1-r1.ebuild :
-\&  +  Bump revision to fix bug #999
-\&  +
-\&   *metalog-0.1 (23 Feb 2003)
-.Ve
-.PP
-.Vb 1
-\&     23 Feb 2003; Aron Griffis <agriffis@gentoo.org> metalog-0.1.ebuild :
-.Ve
-.PP
-For a multi-line entry, omit the command-line arg.
-.PP
-.Vb 10
-\&  $ echangelog
-\&  Please type the log entry, finish with ctrl-d
-\&  Bump revision to fix bug #999.  Necessary to bump the revision because
-\&  the problem appears at run-time, not compile-time.  This should also
-\&  give users the updated default configuration file.
-\&  --- ChangeLog   2003-02-23 14:09:12.000000000 -0500
-\&  +++ ChangeLog.new       2003-02-23 14:12:43.000000000 -0500
-\&  @@ -2,6 +2,13 @@
-\&   # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-\&   # $Header$
-.Ve
-.PP
-.Vb 8
-\&  +*metalog-0.1-r1 (23 Feb 2003)
-\&  +
-\&  +  23 Feb 2003; Aron Griffis <agriffis@gentoo.org> metalog-0.1-r1.ebuild :
-\&  +  Bump revision to fix bug #999.  Necessary to bump the revision because
-\&  +  the problem appears at run-time, not compile-time.  This should also
-\&  +  give users the updated default configuration file.
-\&  +
-\&   *metalog-0.1 (23 Feb 2003)
-.Ve
-.PP
-.Vb 1
-\&     23 Feb 2003; Aron Griffis <agriffis@gentoo.org> metalog-0.1.ebuild :
-.Ve
-.SH "ENVIRONMENT VARIABLES"
-.IX Header "ENVIRONMENT VARIABLES"
-.IP "\s-1ECHANGELOG_USER\s0" 4
-.IX Item "ECHANGELOG_USER"
-If echangelog can't figure out your username for the entry, you should
-set \s-1ECHANGELOG_USER\s0.  For example, export ECHANGELOG_USER=\*(L"Aron
-Griffis <agriffis@gentoo.org>\*(R"
-.SH "NOTES"
-.IX Header "NOTES"
-As of the most recent version of echangelog (when this man-page
-appeared), echangelog puts all new entries at the top of the file
-instead of finding the appropriate *version line within the file.
-This is because that \*(L"new\*(R" ChangeLog format was never agreed upon by
-the Gentoo developers.  Unfortunately the existence of both formats
-will undoubtedly cause much confusion.
-.PP
-This also means that the examples above are wrong, since I just copied
-them from some old email.  However they're not much wrong. ;\-)
-.PP
-This tool was written by Aron Griffis <agriffis@gentoo.org>.  Bugs
-found should be filed against me at http://bugs.gentoo.org/
