@@ -1,2 +1,8 @@
+07 Jan 2004 Aron Griffis <agriffis@gentoo.org>
+	* Updated Makefile to understand building man-page from pod
+	* Removed static man-page in favor of generated man-page from pod
+	* Added copyright year updating
+	* Allow echangelog to run even when no files have changed
+
 2004-01-07 Karl Trygve Kalleberg <karltk@gentoo.org>
 	* Added Makefile
